...
        self.hostingController?.view.layer?.backgroundColor = NSColor.clear.cgColor

        // --- Setup the left-click popover ---
        popover = NSPopover()
        popover.contentSize = initialSize
        popover.contentViewController = hostingController
        popover.contentViewController?.view.setAccessibilityIdentifier("TaskerPopoverWindow")
        popover.behavior = .transient
        popover.appearance = NSAppearance(named: .vibrantDark)

        // --- Setup the status item (menu bar icon) ---
        statusItem = NSStatusBar.system.statusItem(withLength: NSStatusItem.variableLength)
        if let button = statusItem.button {
...
